main Items section
main Items Updates

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ li{
 
 
 .item-prop{
-  background-color: #fff;
+
   margin-bottom: 10px;
 
 }
@@ -162,9 +162,24 @@ li{
 }
 #main-items ul li{
   margin-right: 10px;
+  color: #666666;
 }
+#main-items img{
+  width: 100%;
+}
+.button {
+    background-color: #57c5a0;
+    border: none;
+    color: white;
+    padding: 33px 10px;
+    margin-top: -190px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 
-
+    cursor: pointer;
+}
 
 
 
